Archive2/0b/93f4b238cef4dd/output
main.cpp: In function ‘int main()’:
main.cpp:13:8: error: invalid conversion from ‘long int*’ to ‘long long int*’ [-fpermissive]
  foo(&n);
        ^
